# adk-hackathon-demo-fluent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  server.py  use-case.md
network_outage_agent/: agent.py  tools.py
network_outage_agent/data/: customer_accounts.json  network_alerts.json  seed_generator.py
static/: architecture.html  index.html
static/css/: styles.css
static/js/: app.js
